--- a/src/css/main.css
+++ b/src/css/main.css
@@ -185,8 +185,12 @@ a {
     width: 240px;
   }
 
+  .nav {
+    border-bottom: 2px solid #eee;
+  }
+
   .nav-item {
-      padding: 30px 15px 20px 15px;
+    padding: 15px 15px 10px 15px;
   }
 
   .title {
