--- a/src/css/shop.css
+++ b/src/css/shop.css
@@ -75,6 +75,7 @@
 .products-container {
   text-align: center;
   overflow: scroll;
+  -webkit-overflow-scrolling: touch;
   width: 100%;
   height: calc(100vh - 123px);
 }
@@ -114,6 +115,7 @@
   height: calc(100vh - 177px);
   text-align: right;
   overflow: scroll;
+  -webkit-overflow-scrolling: touch;
   border-left: 3px solid #eee;
 }
 
