--- a/src/css/atype.css
+++ b/src/css/atype.css
@@ -44,6 +44,7 @@
     width: 90%;
     display: block;
     line-height: 120px;
+    margin-top: 15px;
   }
 
   #associatetype-container {
@@ -59,6 +60,8 @@
     line-height: 80px;
     height: 80px;
     width: 70%;
+    box-shadow: none;
+    border: 1px solid #eee;
   }
 }
 
