--- a/src/css/country.css
+++ b/src/css/country.css
@@ -37,6 +37,13 @@
   font-weight: 800;
 }
 
+@media only screen and (max-width: 730px) {
+  .country {
+    box-shadow: none;
+    border: 1px solid #eee;
+  }
+}
+
 @media only screen and (max-width: 600px) {
   .country {
     width: 48px;
