--- a/src/css/animation.css
+++ b/src/css/animation.css
@@ -142,8 +142,8 @@
 }
 
 .animation-svg {
-  width: 400px;
-  height: 400px;
+  width: 28vw;
+  height: 28vw;
 }
 
 .animation-logo-container {
@@ -152,7 +152,7 @@
 }
 
 .animation-logo-container img {
-  width: 400px;
+  width: 28vw;
 }
 
 .nav-logo:hover {
@@ -210,4 +210,16 @@
 .lds-ellipsis div:nth-child(4) {
   left: 45px;
   animation: lds-ellipsis3 0.6s infinite;
+}
+
+
+@media only screen and (max-width: 800px){
+  .animation-svg {
+    width: 28vh;
+    height: 28vh;
+  }
+
+  .animation-logo-container img {
+    width: 28vh;
+  }
 }
