--- a/src/css/main.css
+++ b/src/css/main.css
@@ -47,6 +47,29 @@ a {
   height: 75px;
 }
 
+.beta-container {
+  background-color: #458CC8;
+  position: fixed;
+  width: 120px;
+  height: 120px;
+  top: -60px;
+  left: -60px;
+  z-index: 103;
+  transform: rotate(-45deg);
+}
+
+.beta-logo {
+  width: 120px;
+  position: absolute;
+  bottom: 6px;
+  text-align: center;
+  font-size: 16px;
+  color: #FFF;
+  font-weight: 800;
+  text-transform: uppercase;
+  z-index: 104;
+}
+
 .ham-svg {
   width: 60px;
   height: 60px;
@@ -205,5 +228,17 @@ a {
   .description {
     font-size: 14px;
     line-height: 20px;
+  }
+
+  .beta-container {
+    width: 90px;
+    height: 90px;
+    top: -45px;
+    left: -45px;
+  }
+  
+  .beta-logo {
+    width: 90px;
+    font-size: 12px;
   }
 }
