--- a/src/css/final.css
+++ b/src/css/final.css
@@ -81,9 +81,11 @@ button:disabled {
 }
 
 .copied-text {
-  background-color: #8DFF98;
-  color: #2D3E4F;
-  padding: 30px 0px 30px 0px;
+  font-weight: 800;
+  background-color: #599730;
+  color: #FFF;
+  font-size: 24px;
+  padding: 60px 0px 60px 0px;
   position: absolute;
   bottom: 0px;
   width: 100%;
