--- a/src/css/shop.css
+++ b/src/css/shop.css
@@ -244,19 +244,24 @@
 
   .shop-step {
     position: fixed;
-    font-size: 10px;
-    height: 54px;
+    font-size: 14px;
+    height: 75px;
     width: 100%;
-    line-height: 54px;
+    line-height: 75px;
     top: inherit;
     right: 0;
     bottom: 0px;
     border-radius: 0px;
     text-transform: uppercase;
+    font-weight: 800;
   }
 
   .shop-step:hover {
     transform: none;
+  }
+
+  .product:last-child {
+    margin-bottom: 90px;
   }
 
   .cart-item-name {
@@ -269,6 +274,28 @@
 }
 
 @media only screen and (max-width: 600px) {
+  .product {
+    width: 120px;
+    margin: 9px 3px 9px 3px;
+  }
+  
+  .product-img {
+    line-height: 120px;
+    padding: 15px;
+    width: 90px;
+    height: 90px;
+    font-size: 14px;
+  }
+  
+  .product-info {
+    padding: 12px;
+    font-size: 10px;
+  }
+
+  .add-product-type {
+    font-size: 8px;
+  }
+
   .shop-circle {
     width: 150px;
     height: 150px;
