--- a/src/css/shop.css
+++ b/src/css/shop.css
@@ -231,6 +231,53 @@
   font-size: 10px;
 }
 
+.products-search-container {
+  width: auto;
+  text-align: right;
+  margin-right: 60px;
+}
+
+.products-search {
+  display: inline-block;
+  padding: 9px 0px 9px 30px;
+  border-radius: 30px;
+  border: 1px solid #C7C7C7;
+  text-align: left;
+  width: 300px;
+}
+
+.products-searchbar {
+  font-size: 12px;
+  font-family: 'Montserrat';
+  vertical-align: middle;
+  width: 240px;
+  border: none;
+}
+
+.products-searchbar:focus {
+  border: none;
+}
+
+.search-img {
+  vertical-align: middle;
+  width: 18px;
+  opacity: 0.9;
+  float: right;
+  margin-right: 15px;
+  cursor: pointer;
+}
+
+.products-search:hover .search-img {
+  opacity: 1;
+}
+
+@media only screen and (max-width: 1250px) {
+  .products-search-container{
+    text-align: center;
+    margin-right: 0px;
+  }
+}
+
 @media only screen and (max-width: 970px) {
   .products-sidebar {
     display: none;
@@ -332,5 +379,17 @@
 
   .bag-img {
     width: 33px;
+  }
+
+  .products-search-container {
+    margin-top: 6px;
+  }
+
+  .products-search {
+    width: 200px;
+  }
+
+  .products-searchbar {
+    width: 120px;
   }
 }
