--- a/src/css/main.css
+++ b/src/css/main.css
@@ -26,7 +26,7 @@ a {
   width: 100%;
 }
 
-.nav, .title, .sub-title, .step, .menu-component-container, .beta-logo, .circle-text, .country, .associatetype, #shop-circle-text, .product-img, .add-product-type, .shop-step, .products-sidebar-title, .cart-title, .generate-link, .clip-boi, .animation-logo-container, .cart-image, .bag-img, .cart-item-type {
+.nav, .title, .sub-title, .step, .menu-component-container, .circle-text, .country, .associatetype, #shop-circle-text, .product-img, .add-product-type, .shop-step, .products-sidebar-title, .cart-title, .generate-link, .clip-boi, .animation-logo-container, .cart-image, .bag-img, .cart-item-type {
   user-select: none;
 }
 
@@ -50,29 +50,6 @@ a {
 
 .logo {
   height: 75px;
-}
-
-.beta-container {
-  background-color: #458CC8;
-  position: fixed;
-  width: 120px;
-  height: 120px;
-  top: -60px;
-  left: -60px;
-  z-index: 103;
-  transform: rotate(-45deg);
-}
-
-.beta-logo {
-  width: 120px;
-  position: absolute;
-  bottom: 9px;
-  text-align: center;
-  font-size: 16px;
-  color: #FFF;
-  font-weight: 800;
-  text-transform: uppercase;
-  z-index: 104;
 }
 
 .ham-svg {
@@ -243,17 +220,5 @@ a {
   .description {
     font-size: 14px;
     line-height: 20px;
-  }
-
-  .beta-container {
-    width: 90px;
-    height: 90px;
-    top: -45px;
-    left: -45px;
-  }
-  
-  .beta-logo {
-    width: 90px;
-    font-size: 12px;
   }
 }
