--- a/src/css/atype.css
+++ b/src/css/atype.css
@@ -7,7 +7,7 @@
   width: 240px;
   height: 330px;
   cursor: pointer;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
   margin: 6px;
   padding: 10px 20px 10px 20px;
   display: inline-block;
