--- a/src/css/country.css
+++ b/src/css/country.css
@@ -12,7 +12,7 @@
   padding: 10px 20px 10px 20px;
   font-size: 14px;
   cursor: pointer;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
 }
 
 .country:hover, .country-selected {
