--- a/src/css/shop.css
+++ b/src/css/shop.css
@@ -8,6 +8,7 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
 }
 
 .shop-circle:hover {
@@ -83,7 +84,7 @@
 .product {
   display: inline-block;
   width: 180px;
-  border: 1px solid #2D3E4F;
+  box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
   margin: 15px;
 }
 
@@ -129,13 +130,14 @@
 
 .add-product-type {
   display: inline-block;
-  width: calc(50% - 22px);
+  width: calc(50% - 20px);;
+  box-shadow: inset 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
   cursor: pointer;
   padding: 10px;
   font-size: 10px;
   color: #FFF;
+  background-color: rgb(255,255,255,0.08);
   text-align: center;
-  border: 1px solid #FFF;
 }
 
 .add-product-type:hover {
@@ -144,7 +146,7 @@
 }
 
 .cart-item-container {
-  border: 1px solid #ccc;
+  box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
   text-align: center;
   margin-bottom: 15px;
   position: relative;
@@ -182,6 +184,7 @@
   background-color: #458CC8;
   color: #FFF;
   border-radius: 50%;
+  box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
   height: 100px;
   width: 100px;
   text-align: center;
