--- a/src/css/shop.css
+++ b/src/css/shop.css
@@ -145,6 +145,10 @@
   background-color: #FFF;
 }
 
+.full-width {
+  width: calc(100% - 20px);
+}
+
 .cart-item-container {
   box-shadow: 0 2px 6px 0 hsla(0, 0%, 0%, 0.2);
   text-align: center;
